--- a/my-first-pipeline/Jenkinsfile
+++ b/my-first-pipeline/Jenkinsfile
@@ -8,7 +8,7 @@ pipeline {
         sh 'node --version'
       }
     }
-    stage('Test') {
+    stage('Test 2') {
       steps {
         sh 'echo "New Stage'
       }
