--- a/my-first-pipeline/Jenkinsfile
+++ b/my-first-pipeline/Jenkinsfile
@@ -10,7 +10,7 @@ pipeline {
     }
     stage('Test 2') {
       steps {
-        sh 'echo "New Stage'
+        sh 'echo "New Stage"'
       }
     }
   }
